fix: handle null in JGradeMapper and add missing mocks in tests